@@ -331,3 +331,4 @@ Revision	Version Updated		Log Message
 308		C++			Updated Readme.txt
 309		C++			Massive overhaul of DW pop conversion.
 310		C++			Better logging of EU3 type check errors.
+311		C++			Culture rating increases prestige.
